// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components - features - LN-Nota - infoBox - helper should return the correct config for deportes 1`] = `
{
  "descriptionProps": {
    "text": "Encontrá resultados de fútbol en vivo, los próximos partidos, las tablas de posiciones, y todas las estadísticas de los principales torneos del mundo.",
  },
  "imgProps": {
    "alt": "Imagen de celular con la app de Canchallena",
    "className": "w-100",
    "sources": [
      {
        "minWidth": 768,
        "srcSet": "https://arc-static.glanacion.com/pf/resources/images/cll_web-image_infobox_desk.webp",
      },
    ],
    "src": "https://arc-static.glanacion.com/pf/resources/images/cll_web-image_infobox_mob.webp",
    "width": undefined,
  },
  "label": "canchallena",
  "linkProps": {
    "href": "https://canchallena.lanacion.com.ar/",
    "target": "_blank",
    "title": "Ir a Canchallena",
  },
  "logoProps": {
    "alt": "Logo de Canchallena",
    "className": undefined,
    "src": "https://arc-static.glanacion.com/pf/resources/images/cll-logo.webp",
    "width": undefined,
  },
  "mediaDynamicComponent": undefined,
  "showZocalo": true,
}
`;

exports[`components - features - LN-Nota - infoBox - helper should return the correct config for juegos 1`] = `
{
  "descriptionProps": {
    "text": "Disfrutá de Crucigrama, Palabra oculta y todos tus pasatiempos favoritos.",
  },
  "imgProps": {
    "alt": "Imagen de celular con la app de LN Juegos",
    "className": "w-100",
    "sources": [
      {
        "minWidth": 768,
        "srcSet": "https://arc-static.glanacion.com/pf/resources/images/promo-juegos_dsk.webp",
      },
    ],
    "src": "https://arc-static.glanacion.com/pf/resources/images/promo-juegos_mob.webp",
    "width": undefined,
  },
  "label": "ln_juegos",
  "linkProps": {
    "href": "https://www.lanacion.com.ar/juegos/",
    "title": "Ir a Juegos",
  },
  "logoProps": {
    "alt": "Logo de LN Juegos",
    "className": "w-140_max512",
    "src": "https://arc-static.glanacion.com/pf/resources/images/logo-juegos.webp",
    "width": undefined,
  },
  "mediaDynamicComponent": {
    "$$typeof": Symbol(react.transitional.element),
    "_owner": null,
    "_store": {},
    "key": null,
    "props": {
      "className": "w-210",
      "src": "https://cdn.jwplayer.com/videos/Ry1nJgln.mp4",
    },
    "type": [Function],
  },
  "showZocalo": true,
}
`;

exports[`components - features - LN-Nota - infoBox - helper should return the correct config for violence zocalo 1`] = `
{
  "descriptionProps": {
    "classnames": {
      "button": "mb-24_m",
      "text": "prumo prumo-slab prumo-medium text-18 text-center text-initial_m text-neutral-light-800",
      "title": "prumo --prumo-italic prumo-slab text-28 font-bold text-neutral-light-800 uppercase text-center text-start_m w-160_max512 w-width_min512",
    },
    "text": "Entrá a la guía de servicio y encontrá los tips de los expertos sobre cómo prevenir, actuar y encontrar ayuda frente a este problema.",
    "title": "Violencia de género",
  },
  "imgProps": {
    "alt": "Imagen de asistencia contra violencia de género",
    "className": "w-100",
    "sources": [
      {
        "minWidth": 768,
        "srcSet": "https://arc-static.glanacion.com/pf/resources/images/violencia-genero-desk.webp",
      },
    ],
    "src": "https://arc-static.glanacion.com/pf/resources/images/violencia-genero-mob.webp",
    "width": undefined,
  },
  "label": "violencia_genero",
  "linkProps": {
    "href": "https://www.lanacion.com.ar/comunidad/hablemos-de-todo/hablemos-de-todo-nid09052025/",
    "target": "_blank",
    "title": "IR A LA GUÍA",
  },
  "logoProps": {
    "alt": "Logo de asistencia contra violencia de género",
    "className": undefined,
    "src": "",
    "width": 150,
  },
  "mediaDynamicComponent": undefined,
  "showZocalo": true,
}
`;
